force-app/main/default/objects/Meeting_Location__c/Meeting_Location__c.object-meta.xml
<CustomObject>
    <label>Meeting Location</label>
    <nameField>
        <displayFormat>ML-{YY}{MM}{DD}{0000}</displayFormat>
        <label>Meeting Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Location</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>