force-app/main/default/objects/Meeting_Location__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Meeting Location</relationshipLabel>
    <relationshipName>Meeting_Location</relationshipName>
    <type>Lookup</type>
</CustomField>